# Solitaire

./: CMakeLists.txt  CardContainer.cpp  CardContainer.h  Column.cpp  Column.h  Deck.cpp  Display.h  Moves.cpp  Moves.h  README.md  main.cpp
Version2/: CMakeLists.txt  Card.cpp  Card.h  Deck.h  Display.cpp  FoundationPiles.cpp  FoundationPiles.h  Test.cpp
